test/tests/operators/serve_http/serve_http_error_max_connections_too_large.txt
error: `max_connections` must be at most 4294967295
 --> tests/operators/serve_http/serve_http_error_max_connections_too_large.tql:6:47
  |
6 | serve_http "127.0.0.1:31337", max_connections=4294967296
  |                                               ^^^^^^^^^^ 
  |
